1999-11-12    <rpr@rpr.wapit.com>

	* bb_msg.h, bb_msg.c: added functions _last_mod and
	_oldest_message for better queue control, and total number of
	added messages to queue length

	* bearerbox.c, boxc.c: some performance fixes
	
1999-11-12    <rpr@rpr.wapit.com>

	* Release-0.1: added file to list modifications to SMSGateway 0.6
	This is updated as the gateway is improved.	

	* octstr.c, octstr.h: added function octstr_replace, so that
	unnecessary destroy/create can be avoided

Fri Nov 12 02:00:00 1999  Mikael Gueck  <mikael.gueck@wapit.com>

	* http.(c|h), *box.c: httpserver_get_request now returns
	the client IP.

	* lots of other unspecified stuff

1999-11-11    <rpr@rpr.wapit.com>

	* octstr.c, octstr.h: added octstr_create_limited

	* many modules: changed bearerbox and smsbox to use Msg instead
	of SMSMessage. As these are not quite perfect currently, the
	system does not work well right now. Waiting for patches from
	other participants.

Thu Nov 11 19:41:40 1999  Lars Wirzenius  <liw@wapit.com>

	* msg.c: Fixed warning of unused variable and erroneous packing of
	of strings. Wrote msg_dump.

	* octstr.c: octstr_dump can be called with a NULl argument.

1999-11-11    <rpr@rpr.wapit.com>

	* msg.h, msg.c: added function msg_type.

	* octstr.h, octstr.c: functions octstr_duplicate, octstr_send ja
	octstr_recv added. 

	* unlimited number of improvements, bugfixing and enhancements in
	other modules. Too many.

1999-11-09    <rpr@rpr.wapit.com>

	* initial release. Copied several files from old smsgateway
	project, added new protypes and commented thigns out so that
	they cvan be compiled. This does NOT do anything, yet.

	* VERSION: version 0.1 set
	
	