@@ -3,8 +3,14 @@ bearerbox-port = 13001
 sendsms-port = 22022
 global-sender = 10000
 
-username = foo
-password = bar
+username = one
+password = yksi
+
+username = three
+password = kolme
+max-messages = 3
+split-chars = " "
+split-suffix = "..."
 
 keyword = www
 url = http://%S
