@@ -90,7 +90,8 @@ log-level = 0
 #
 # split-chars = (character-list)
 #	allowed characters to split the message split into several messages.
-#	So, with "#!" the message is split from last '#' or '!'
+#	So, with "#!" the message is split from last '#' or '!', which is 
+#       included in the previous part
 #
 # split-suffix = (string)
 #	if split, this string is appended to each message except the last one
